--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,18 +1,32 @@
 <p>This is the Users component.</p>
+<button class="btn btn-sm mb3" [class.allowNewUser]="allowNewUser">
+  Add new user
+</button>
 <h4>Here are all the current users</h4>
 <div *ngIf="users?.length > 0">
   <ul>
-    <li class="card card-body mb-3" *ngFor="let user of users">
+    <li
+      class="card card-body mb-3"
+      [class.isActive]="user.isActive"
+      [style.border-color]="user.isActive ? 'red' : 'black'"
+      *ngFor="let user of users"
+    >
       <h5>Name: {{ user.firstName + " " + user.lastName }}</h5>
-
-      <ul *ngIf="showExtended">
-        <li>Age: {{ user.age }}</li>
-        <li>Email: {{ user.email }}</li>
-        <li *ngIf="user.address">
-          Address: {{ user.address.street }} {{ user.address.city }},
-          {{ user.address.state }}
-        </li>
-      </ul>
+      <div class="row">
+        <div class="col-4">
+          <img [src]="user.image" alt="" />
+        </div>
+        <div class="col-8">
+          <ul *ngIf="showExtended">
+            <li>Age: {{ user.age }}</li>
+            <li>Email: {{ user.email }}</li>
+            <li *ngIf="user.address">
+              Address: {{ user.address.street }} {{ user.address.city }},
+              {{ user.address.state }}
+            </li>
+          </ul>
+        </div>
+      </div>
     </li>
   </ul>
 </div>
