--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -24,6 +24,7 @@
               Address: {{ user.address.street }} {{ user.address.city }},
               {{ user.address.state }}
             </li>
+            <li>Joined: {{ user.registeredDate | date }}</li>
           </ul>
         </div>
       </div>
