--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
   <h1>{{ title | titlecase }} app is running!</h1>
-  <app-user></app-user>
-  <app-users></app-users>
+  <!-- <app-user></app-user>
+  <app-users></app-users> -->
+  <h5>This is HTTP request practice</h5>
+  <app-user-http-requests></app-user-http-requests>
 </div>
 
 <router-outlet></router-outlet>
