working on post, event emitter output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <!-- <app-user></app-user>
   <app-users></app-users> -->
   <h5>This is HTTP request practice</h5>
-  <app-user-http-requests></app-user-http-requests>
+  <app-posts-http-requests></app-posts-http-requests>
 </div>
 
 <router-outlet></router-outlet>
