--- a/src/app/components/posts-http-requests/posts-http-requests.component.html
+++ b/src/app/components/posts-http-requests/posts-http-requests.component.html
@@ -1,3 +1,4 @@
+<app-posts-form (newPost)="onNewPost($event)"></app-posts-form>
 <h3>Here are all the posts</h3>
 <div class="card" *ngFor="let post of posts">
   <div class="card-body">
