--- a/src/app/components/posts-form/posts-form.component.html
+++ b/src/app/components/posts-form/posts-form.component.html
@@ -8,6 +8,8 @@
       id="title"
       placeholder="Title"
       #title
+      name="title"
+      [(ngModel)]="currentPost.title"
     />
   </div>
   <div class="form-group">
@@ -18,6 +20,8 @@
       id="body"
       placeholder="Body"
       #body
+      name="body"
+      [(ngModel)]="currentPost.body"
     />
   </div>
 
@@ -25,7 +29,16 @@
     (click)="addPost(title.value, body.value)"
     type="submit"
     class="btn btn-primary"
+    *ngIf="!isEdit"
   >
-    Submit
+    Submit Post
+  </button>
+  <button
+    (click)="updatePost()"
+    type="submit"
+    class="btn btn-primary"
+    *ngIf="isEdit"
+  >
+    Edit Post
   </button>
 </form>
