--- a/src/app/components/posts-http-requests/posts-http-requests.component.html
+++ b/src/app/components/posts-http-requests/posts-http-requests.component.html
@@ -1,8 +1,16 @@
-<app-posts-form (newPost)="onNewPost($event)"></app-posts-form>
+<app-posts-form
+  [currentPost]="currentPost"
+  [isEdit]="isEdit"
+  (newPost)="onNewPost($event)"
+></app-posts-form>
 <h3>Here are all the posts</h3>
 <div class="card" *ngFor="let post of posts">
   <div class="card-body">
     <h4>{{ post.title }}</h4>
     <p>{{ post.body }}</p>
+    <div class="buttons">
+      <div class="btn btn-warning mx-2" (click)="editPost(post)">Edit post</div>
+      <div class="btn btn-danger mx-2">Delete post</div>
+    </div>
   </div>
 </div>
