--- a/src/app/components/posts-http-requests/posts-http-requests.component.html
+++ b/src/app/components/posts-http-requests/posts-http-requests.component.html
@@ -2,6 +2,7 @@
   [currentPost]="currentPost"
   [isEdit]="isEdit"
   (newPost)="onNewPost($event)"
+  (updatedPost)="onUpdatedPost($event)"
 ></app-posts-form>
 <h3>Here are all the posts</h3>
 <div class="card" *ngFor="let post of posts">
