--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <h1>{{ title | titlecase }} app is running!</h1>
   <!-- <app-user></app-user>
   <app-users></app-users> -->
-  <h5>This is HTTP request practice</h5>
-  <app-posts-http-requests></app-posts-http-requests>
+  <!-- <h5>This is HTTP request practice</h5>
+  <app-posts-http-requests></app-posts-http-requests> -->
+  <h5>this will be where components go for routing practice</h5>
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
