--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Navbar</a>
+  <a class="navbar-brand" routerLink="/">Home</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -13,11 +13,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active"
-        >Home <span class="sr-only">(current)</span></a
+      <a
+        class="nav-item nav-link active"
+        routerLink="/users"
+        [routerLinkActive]="['active']"
+        >Users</a
       >
-      <a class="nav-item nav-link">Features</a>
-      <a class="nav-item nav-link">Pricing</a>
+      <a
+        class="nav-item nav-link"
+        routerLink="/posts"
+        [routerLinkActive]="['active']"
+        >Posts</a
+      >
     </div>
   </div>
 </nav>
