--- a/src/app/components/posts-http-requests/posts-http-requests.component.html
+++ b/src/app/components/posts-http-requests/posts-http-requests.component.html
@@ -7,7 +7,9 @@
 <h3>Here are all the posts</h3>
 <div class="card" *ngFor="let post of posts">
   <div class="card-body">
-    <h4>{{ post.title }}</h4>
+    <h4>
+      <a routerLink="/post/{{ post.id }}">{{ post.title }}</a>
+    </h4>
     <p>{{ post.body }}</p>
     <div class="buttons">
       <div class="btn btn-warning mx-2" (click)="editPost(post)">Edit post</div>
